# rust_studies

./: Cargo.toml  README.md
.github/workflows/: rust.yml
diesel/diesel_demo/src/: lib.rs  models.rs
diesel_demo/: .env.example  Cargo.toml  README.md  diesel.toml
diesel_demo/src/: lib.rs
gRPC/grpc_crud/: .env  Cargo.toml  README.md
gRPC/grpc_crud/migrations/00000000000000_diesel_initial_setup/: down.sql
gRPC/grpc_crud/migrations/2025-07-21-180843_user/: down.sql  up.sql
gRPC/grpc_crud/proto/: user.proto
gRPC/grpc_crud/src/: lib.rs  main.rs  models.rs  schema.rs
gRPC/grpc_crud/src/queries/: create_user.rs  mod.rs
gRPC/helloworld-tonic/: Cargo.toml  README.md
gRPC/helloworld-tonic/src/: client.rs  server.rs
get_call/: Cargo.toml  README.md
get_call/src/: main.rs
