[package]
name = "grpc_crud"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
prost = "0.13.5"
tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}
tonic = "0.13.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "*"
